syntax = "proto3";

package api;

option go_package = "github.com/mateopresacastro/kv/api";

message GetRequest {
    string key = 1;
}

message GetResponse {
    bytes value = 1;
}

message SetRequest {
    string key = 1;
    bytes value = 2;
}

message SetResponse {
    bool ok = 1;
}

message DeleteRequest {
    string key = 1;
}

message DeleteResponse {
    bool ok = 1;
}

service KV {
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Set(SetRequest) returns (SetResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
    rpc List(Empty) returns (stream GetResponse) {}
}

message Empty {}